modifications next semester

--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -410,11 +410,14 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 			\item[4.] {\bf Formaci\'on del Estado: Latinoam\'erica y Sudeste Asi\'atico}.
 				\begin{itemize}
 					\item[$\circ$] Miguel \'Angel Centeno. 1997. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Centeno.pdf}{``Blood and Debt: War and Taxation in Nineteenth-Century Latin America.''} \emph{American Journal of Sociology}, 102(6): 1565---1605.\phantom{\textcite{Centeno1997}} 
+
+					% dar este, y no el de slater.
+					%\item[$\circ$] Luis Schenoni. 2020. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schenoni.pdf}{``Bringing War Back in: Victory and State Formation in Latin America.''} \emph{American Journal of Political Science}: 1---17.\phantom{\textcite{Schenoni2020}} 
 					
 					\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
 				\end{itemize}
 
-		\item[5.] {\bf Origen Institucional del Estado en Las Am\'ericas: ``\emph{Factor Endowments}'' y \emph{Property Rights}}
+		\item[5.] {\bf Origen Institucional del Estado en Las Am\'ericas: ``\emph{Factor Endowments}'' y \emph{Property Rights}.}
 				\begin{itemize}
 					\item[$\circ$] Kenneth Sokoloff y Stanley Engerman. 2000. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Sokoloff_Engerman.pdf}{``Institutions, Factor Endowments, and Paths of Development in the New World''}. \emph{Journal of Economic Perspectives}, 14(3): 217---232.\phantom{\textcite{Sokoloff:2000ug}} 
 					\item[$\circ$] Daron Acemoglu, Simon Johnson y James Robinson. 2002. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Reversal_of_fortune.pdf}{``Reversal Fortune: Geography and Institutions in the Making of the Modern World Income Distribution''}. \emph{The Quarterly Journal of Economics}, 117(4): 1231---1294.\phantom{\textcite{Acemoglu:2002uh}} 
@@ -441,8 +444,15 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[8.] {\bf Capacidad Estatal: El poder ``infraestructural'' del estado}.
 				\begin{itemize}
-          %\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
+         			% dar este y no el de 2008 "revisited"
+         			%\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
+					
 					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} % sacar este
+					
+					% dar este y no el de florian.
+					%\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
+
+
 					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
 				\end{itemize}
 
@@ -461,11 +471,23 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 
 
-		\item[10.] {\bf ¿Podr\'ia no existir el Estado?}
+		\item[10.] {\bf ¿Podr\'ia no existir el Estado?: Sudeste Asi\'atico y \'Africa.}
 				\begin{itemize}
-          \item[$\circ$] Jeffrey Herbst. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
-					\item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
+          \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
+					
+          \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
+
+                    \item[{\Pointinghand}] {\bf Material audiovisual sugerido:}
+                  \begin{enumerate}
+                    \item \href{https://www.cornell.edu/video/james-scott-the-art-of-not-being-governed}{``The Art of Not Being Governed: Hill Peoples and Valley Kingdoms in Mainland Southeast Asia.''} Charla de James Scott acerca de su libro (click en \emph{interactive transcript} para leer el texto mientras ves/escuchas la charla). \'El es cientista pol\'itico y antrop\'ologo de la Universidad de Yale. 
+
+                    \item ``\emph{Free State of Jones}.'' Es una pel\'icula sobre la Guerra civil de EEUU inspirada en la verdadera historia de desertores confederados contra la esclavitud. La pel\'icula muestra c\'omo los desertores arman un ``estado'' en los pantanos de Misisipi---incluso escribiendo una constituci\'on. {\bf Disponible en Netflix}.
+                  \end{enumerate}
+
         		\end{itemize}	
+
+
+
 
 
 
