--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -395,14 +395,14 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 	\item {\color{ForestGreen}{\bf \underline{Formaci\'on y Capacidad del Estado: Guerra, \'Elites, Impuestos, Riqueza y Justicia}}}
 		\begin{itemize}
 			
-			\item[2.] {\bf Formaci\'on del estado: El estado europeo a la luz de la teor\'ia econ\'omica y sociol\'ogica}.
+			\item[2.] {\bf Formaci\'on del estado: Teor\'ias econ\'omicas y sociol\'ogicas}.
 				\begin{itemize} 
 					\item[$\circ$] Mancur Olson. 1993. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Olson.pdf}{``Dictatorship, Democracy, and Development.''} \emph{The American Political Science Review}, 87(3): 567---576.\phantom{\textcite{Olson1993}}
 					
 					\item[$\circ$] Charles Tilly. 1985. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Tilly.pdf}{\emph{War Making as Organized Crime}}. In ``Bringing the State Back In,'' Peter Evans, Dieter Rueschemeyer and Theda Skocpol (eds.). Cambridge University Press. Pp.: 169---187.\phantom{\textcite{Tilly1985}}
 				\end{itemize}
 			
-			\item[3.] {\bf Formaci\'on del estado: El estado europeo a la luz de la sociololog\'ia del derecho}.
+			\item[3.] {\bf Formaci\'on del estado: Sociololog\'ia del derecho}.
 				\begin{itemize} 
 					\item[$\circ$] Joseph Strayer. 1970. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Strayer.pdf}{\emph{On the Medieval Origins of the Modern State}}. Princeton University Press. Ch. 1.\phantom{\textcite{Strayer1970}}
 				\end{itemize}
@@ -444,22 +444,26 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[8.] {\bf Capacidad Estatal: El poder ``infraestructural'' del estado}.
 				\begin{itemize}
-         			% dar este y no el de 2008 "revisited"
-         			%\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
+         	% dar este y no el de 2008 "revisited"
+         	%\item[$\circ$] Michael Mann. 1984 \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_1984.pdf}{``The Autonomous Power of the State: Its Origins, Mechanisms and Results.''} \emph{European Journal of Sociology}, 25(2): 185---213.\phantom{\textcite{Mann1984}} % dejar este
 					
 					\item[$\circ$] Michael Mann. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Mann_2008.pdf}{``Infrastructural Power Revisited.''} \emph{Studies in Comparative International Development}, 43(3-4): 355---365.\phantom{\textcite{Mann2008a}} % sacar este
 					
-					% dar este y no el de florian.
+					% opcion #1: dar este y no el de florian
 					%\item[$\circ$] Dan Slater. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Slater.pdf}{``Can Leviathan be Democratic? Competitive Elections, Robust Mass Politics, and State Infrastructural Power.''} \emph{Studies in Comparative International Development}, 43(3-4): 252---272.\phantom{\textcite{Slater2008}}
 
+          % opcion #2: dar este y el de Mann. Me inclino por esta opcion mejor.
+          % \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
 
 					\item[$\circ$]  Florian Hollenbach, Erik Wibbels and Michael Ward. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Hollenbach_2013.pdf}{``State Building and the Geography of Governance: Evidence From Satellites.''} \emph{Working Paper}.\phantom{\textcite{Hollenbach2013}} 
 				\end{itemize}
 
+
+
       %\item[] {\bf Gobernanza}.
       %  \begin{itemize}
-      %    \item[$\circ$]  Soren Holmberg, Bo Rothstein and Naghmeh Nasiritousi. 2009. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Rothstein.pdf}{``Quality of Government: What You Get.''} \emph{Annual Review of Political Science}, 12(1): 135---161.\phantom{\textcite{Holmberg2009}} 
       %    \item[$\circ$] Francis Fukuyama. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Fukuyama.pdf}{``What Is Governance?.''} \emph{Governance: An International Journal of Policy, Administration, and Institutions}, 26(3): 347---368.\phantom{\textcite{Fukuyama2013}} 
+      %    \item[$\circ$]  Soren Holmberg, Bo Rothstein and Naghmeh Nasiritousi. 2009. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Rothstein.pdf}{``Quality of Government: What You Get.''} \emph{Annual Review of Political Science}, 12(1): 135---161.\phantom{\textcite{Holmberg2009}} 
       %  \end{itemize}
 
 
@@ -471,11 +475,15 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 
 
-		\item[10.] {\bf ¿Podr\'ia no existir el Estado?: Sudeste Asi\'atico y \'Africa.}
+		\item[10.] {\bf ¿Podr\'ia no existir el Estado? Dificultades Geogr\'aficas y Disidencia en el Sudeste Asi\'atico y \'Africa.}
 				\begin{itemize}
-          \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
-					
           \item[$\circ$] Jeffrey Herbst. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Herbst.pdf}{\emph{States and Power in Africa: Comparative Lessons in Authority and Control}}. Princeton University Press. Ch. 5 (``National Design and the Broadcasting of Power'').\phantom{\textcite{Herbst2015}}
+
+          \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 1.\phantom{\textcite{Scott2010}}
+
+          % no dar el de Herbst pero dar el 5to capitulo de Scott: cambiar el titulo a "¿Podr\'ia no existir el Estado? Dificultades Geogr\'aficas y Disidencia en el Sudeste Asi\'atico"
+          % \item[$\circ$] James Scott. 2010. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Scott.pdf}{\emph{The Art of Not Being Governed: An Anarchist History of Upland Southeast Asia}}. Yale University Press. Ch. 5.\phantom{\textcite{Scott2010}}
+					
 
                     \item[{\Pointinghand}] {\bf Material audiovisual sugerido:}
                   \begin{enumerate}
