--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -509,7 +509,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[11.] {\bf Or\'igenes del Capitalismo: Libre Mercado, Instituciones Pol\'iticas y Revoluci\'on Industrial}.
 				\begin{itemize}
-					\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. Pp.: 1---69.\phantom{\textcite{North1990}}
+					\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. ``Part 1: Institutions'': 3---69.\phantom{\textcite{North1990}}
           \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
         \end{itemize}
 
