--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -512,7 +512,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 					\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. ``Part 1: Institutions'': 3---69.\phantom{\textcite{North1990}}
 
 					% dar este y no North1990
-					% \item[$\circ$]  Douglass North. Structure and Change in Economic History, https://www.amazon.com/Structure-Change-Economic-History-Douglass/dp/039395241X
+          % \item[$\circ$]  Douglass North. 1981. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_1981.pdf}{\emph{Structure and Change in Economic History}}. W.W. Norton. ``Part I: Theory'': 3---71.\phantom{\textcite{North1981}}
          			
          			 \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
         \end{itemize}
