--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -518,8 +518,10 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
         \end{itemize}
 
 
+        % dar ambos capitulos 11 y 12, no solo 12. da mejor contexto a la clase y refuerza contenidos de north
 			\item[12.] {\bf \emph{Property Rights} y Revoluci\'on Industrial: ¿Fu\'e por los Incentivos Individuales?}
-				\begin{itemize}
+				\begin{itemize} 
+					%\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 11.\phantom{\textcite{Clark2007}}
 					\item[$\circ$]  Gregory Clark. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Clark.pdf}{\emph{A Farewell to Alms: A Brief Economic History of the World}}. Princeton University Press. Ch.: 12.\phantom{\textcite{Clark2007}}
 				\end{itemize}
 
