--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -221,7 +221,7 @@
 Desde los inicios de la modernidad, ha existido una sinergia multi-dimensional entre el estado y la econom\'ia capitalista. \emph{¿C\'omo nacen los estados? ¿Se puede vivir fuera de un estado?} Vivir en un estado tiene muchos beneficios. Sin embargo, el desarrollo capitalista se caracteriza por la producci\'on de desigualdad. \emph{¿Qu\'e han hecho o podr\'ian hacer los estados para combatir la desigualdad? ¿Por qu\'e los estados cuyos reg\'imenes son democr\'aticos permanecen desigualizantes?}  
 \\
 \\
-Todos estos, y otros temas, son los que estudia la ciencia pol\'itica. En este semestre, m\'as que ideas sueltas, aprenderemos los {\bf debates} que mira esta disciplina. Por eso es que hemos seleccionado los textos y teor\'ias casi siempre en un formato binario: para cada idea, casi siempre habr\'a o una cr\'itica, o una idea contraria. Lo interesante: ambas casi siempre suenan coherentes. Ser\'a \emph{tu} tarea tomar una posic\'on, y ``resolver'' estos conflictos en los ensayos que deber\'as escribir durante este semestre. 
+Todos estos, y otros temas, son los que estudia la ciencia pol\'itica. En este semestre, m\'as que ideas sueltas, aprenderemos los {\bf debates} que mira esta disciplina. Por eso es que hemos seleccionado los textos y teor\'ias casi siempre en un formato binario: para cada idea, casi siempre habr\'a o una cr\'itica, o una idea contraria. Lo interesante: ambas casi siempre suenan coherentes. Ser\'a \emph{tu} tarea tomar una posici\'on, y ``resolver'' estos conflictos en los ensayos que deber\'as escribir durante este semestre. 
 \\
 \\
 Finalmente, un$@$ administrador$@$ p\'ublic$@$ no puede considerarse tal si es que no conoce, por ejemplo, el debate acerca del origen del estado moderno, o las consecuencias sociales y econ\'omicas de vivir en democracia (relativo a vivir en dictadura). Es por esto que este curso, espero, te cause gran inter\'es.
