--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -528,8 +528,11 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[13.] {\bf Representaci\'on Pol\'itica y \'Elites Econ\'omicas: El Pr\'estamo}.
 				\begin{itemize}
-          \item[$\circ$]  David Stasavage. 2011. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage.pdf}{\emph{States of Credit: Size, Power, and the Development of European Polities}}. Princeton University Press. Ch.: 1 (``Introduction'').\phantom{\textcite{Stasavage2011}}
-        \end{itemize}
+          			\item[$\circ$]  David Stasavage. 2011. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage.pdf}{\emph{States of Credit: Size, Power, and the Development of European Polities}}. Princeton University Press. Ch.: 1 (``Introduction'').\phantom{\textcite{Stasavage2011}}
+          			% dar estos en vez, mismo orden
+          			%\item[$\circ$] Douglass North and Barry Weingast. 1989. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_Weingast_1989.pdf}{``Constitutions and Commitment: The Evolution of Institutions Governing Public Choice in Seventeenth-Century England''}. \emph{The Journal of Economic History} 49(4): 803---832.\phantom{\textcite{North1989}}
+          			%\item[$\circ$] David Stasavage. 2007. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Stasavage_2007.pdf}{``Partisan Politics and Public Debt: The Importance of the 'Whig Supremacy' for Britain's Financial Revolution''}. \emph{European Review of Economic History} 11(1): 123---153.\phantom{\textcite{Stasavage2007a}}
+       			 \end{itemize}
 
 
       \item[14.] {\bf ¿Son los \emph{Booms} Econ\'omicos Positivos para la Formaci\'on del Estado?: \'Africa y Latinoam\'erica}.
