--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -566,6 +566,9 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 				\begin{itemize}
 					\item[$\circ$] Kenneth Scheve and David Stasavage. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Taxing_The_Rich.pdf}{``Taxing the Rich: A History of Fiscal Fairness in the United States and Europe''}. Princeton University Press. Ch. 1.\phantom{\textcite{Scheve2016}}
 					\item[$\circ$] Alberto Alesina, Edward Glaeser y Bruce Sacerdote. 2001.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Alesina_et_al.pdf}{``Why Doesn't the United States Have a European-Style Welfare State?''} Brookings Papers on Economic Activity \#1933: 187---277.\phantom{\textcite{Alesina2001}}
+          % dar este en vez de Alesina's, pero ver bien que capitulo
+          %\item[$\circ$] Theda Skocpol. 1995.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Skocpol_1995.pdf}{``Protecting Soldiers and Mothers: The Political Origins of Social Policy in United States''} Harvard University Press. Ch.: ???.\phantom{\textcite{Alesina2001}}
+
 				\end{itemize}
 
 
