--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -576,13 +576,13 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 				\end{itemize}
 
 
-			\item[18.] {\bf Reformas Pol\'iticas de Bienestar en Latino Am\'erica}.
+			\item[18.] {\bf Reformas Pol\'iticas de Bienestar en Latino Am\'erica, Asia y Europa del Este: Restricciones Fiscales y Reg\'imenes Pol\'iticos}.
 				\begin{itemize}
 					\item[$\circ$] Stephan Haggard y Robert Kaufman. 2008. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kaufman_Welfare.pdf}{``Development, Democracy, and Welfare States''}. Princeton University Press. Ch. 2 y 5.\phantom{\textcite{Haggard2008a}}
         \end{itemize}
 
 
-			\item[19.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica (II)}.
+			\item[19.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica}.
 				\begin{itemize}
 					\item[$\circ$] Hector Schamis. 1999. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schamis_1999.pdf}{``Distributional Coalitions and the Politics of Economic Reform in Latin America''}. \emph{World Politics} 51(2): 236---268.\phantom{\textcite{Schamis1999}}
 					\item[$\circ$] Gustavo Flores-Mac\'ias. 2010.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Flores_Macias_2010.pdf}{``Statist vs. Pro-Market: Explaining Leftist Governments' Economic Policies in Latin America''}. \emph{Comparative Politics} 42(4): 413---433.\phantom{\textcite{Flores-Macias2010}}
