--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -585,6 +585,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 			\item[19.] {\bf Transici\'on Democr\'atica y Liberalizaci\'on Econ\'omica en Latino Am\'erica}.
 				\begin{itemize}
 					\item[$\circ$] Hector Schamis. 1999. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Schamis_1999.pdf}{``Distributional Coalitions and the Politics of Economic Reform in Latin America''}. \emph{World Politics} 51(2): 236---268.\phantom{\textcite{Schamis1999}}
+          % Dar Bahamonde and Trasberg en vez de Shamis y CAMBIAR TITULO
 					\item[$\circ$] Gustavo Flores-Mac\'ias. 2010.  \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Flores_Macias_2010.pdf}{``Statist vs. Pro-Market: Explaining Leftist Governments' Economic Policies in Latin America''}. \emph{Comparative Politics} 42(4): 413---433.\phantom{\textcite{Flores-Macias2010}}
 				\end{itemize}
 
@@ -599,7 +600,7 @@ Las ayudant\'ias se har\'an \emph{on-demand}. Ah\'i tendr\'as otra oportunidad p
 
 			\item[21.] {\bf Condiciones de Redistribuci\'on en Autocracias y Democracias}.
 				\begin{itemize}
-					\item[$\circ$] Michael Albertus. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Albertus_2013.pdf}{``Autocracy and Redistribution: The Politics of Land Reform}. Cambridge University Press. Ch. 1.\phantom{\textcite{Albertus2015}}
+					\item[$\circ$] Michael Albertus. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Albertus_2015.pdf}{``Autocracy and Redistribution: The Politics of Land Reform}. Cambridge University Press. Ch. 1.\phantom{\textcite{Albertus2015}}
 					\item[$\circ$] Michael Dorsch and Paul Maarek. 2019. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Dorsch_2019.pdf}{``Democratization and the Conditional Dynamics of Income Distribution''}. \emph{American Political Science Review} 113(2): 385---404.\phantom{\textcite{Dorsch2019}}
 				\end{itemize}
 
